adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem incidunt perspiciatis inventore sapiente, quisquam ex expedita veniam, deleniti, minima voluptatum nam architecto magnam harum mollitia praesentium quidem esse et velit!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam aliquid ad nobis minus laboriosam necessitatibus inventore eaque officiis perferendis maiores ipsum, voluptatum totam voluptas facere impedit sunt officia consequuntur harum.</p>
 </body>
 </html>
